--- a/main.html
+++ b/main.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
+    <!--
+        Сайт состоит из четырёх основных страниц:
+        Home, About us, Services, News, Contact us.
+    -->
     
 </body>
 </html>
