--- a/main.html
+++ b/main.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="Styles/all_styles.css">
 </head>
 <body>
     <!--
         Сайт состоит из четырёх основных страниц:
         Home, About us, Services, News, Contact us.
+        Содержание всех страниц будет только на html, css и js.
     -->
+
+    <!--
+        Создаю Header с навигационной панелью, 
+        которая используется на всех страницах.
+    -->
+    <header>
+        <nav>
+            <a href="main.html">
+                <p class="logo">LOGO</p>
+            </a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">News</a></li>
+                <a href="" class="contact">Contact us</a>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
