--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">Home</title>
+    <title id="title">News</title>
     <link rel="stylesheet" href="Styles/all_styles.css">
     <script src="scripts/main_script.js"></script>
 </head>
@@ -24,13 +24,13 @@
                 <p class="logo">LOGO</p>
             </a>
             <ul class="header_navigation-list">
-                <li>
-                    <a href="./main.html">Home</a>
-                    <img id="header_navigation-image" src="images/Under_line.png" alt="under_line">
-                </li>
+                <li><a href="./main.html">Home</a></li>
                 <li><a href="./about_us.html">About us</a></li>
                 <li><a href="./services.html">Services</a></li>
-                <li><a href="./news.html">News</a></li>
+                <li>
+                    <a href="./news.html">News</a>
+                    <img id="header_navigation-image" src="images/Under_line.png" alt="under_line">
+                </li>
                 <a href="./contact_us.html" class="contact_us">Contact us</a>
             </ul>
         </nav>
