--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">About us</title>
-    <link rel="stylesheet" href="Styles/all_styles.css">
+    <link rel="stylesheet" href="styles/all_styles.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
@@ -20,9 +20,7 @@
     -->
     <header>
         <nav class="header_navigation">
-            <a href="main.html">
-                <p class="logo">LOGO</p>
-            </a>
+            <a class="header_logo" href="main.html">LOGO</a>
             <ul class="header_navigation-list">
                 <li><a href="./main.html">Home</a></li>
                 <li>
