--- a/main.html
+++ b/main.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Home</title>
-    <link rel="stylesheet" href="styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <script src="Scripts/main_script.js"></script>
 </head>
 <body>
@@ -35,6 +36,25 @@
     </header>
 
     <!--
+        Основное тело сайта.
+    -->
+    <div class="main">
+        <!-- Верхний блок с кнопкой -->
+        <div class="main_firstblock">
+            <div class="firstblock-text">
+                <p class="firstblock-text_head">3D game Dev</p>
+                <p class="firstblock-text_body">Work that we produce for our clients</p>
+                <p class="firstblock-text_footer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+                <a class="firstblock-button" href="./main.html">Get more details</a>
+            </div>
+            <div class="firstblock-image">
+                <p>1</p>
+            </div>
+        </div>
+
+    </div>
+
+    <!--
         Footer с различным содержанием,
         начиная от ссылок на другие страницы
         и заканчивая ссылками на соц-сети и контактный телефон. 
@@ -43,7 +63,7 @@
     <footer>
         <div class="footer_main">
             <div class="footer_main-logo">
-                <a href="main.html">LOGO</a>
+                <a href="./main.html">LOGO</a>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <p>@Logo</p>
             </div>
