--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">About us</title>
-    <link rel="stylesheet" href="styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/all_styles.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
@@ -33,6 +33,13 @@
             </ul>
         </nav>
     </header>
+
+    <!--
+        Основное тело сайта.
+    -->
+    <div class="main">
+
+    </div>
     
     <!--
         Footer с различным содержанием,
@@ -43,7 +50,7 @@
     <footer>
         <div class="footer_main">
             <div class="footer_main-logo">
-                <a href="main.html">LOGO</a>
+                <a href="./main.html">LOGO</a>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <p>@Logo</p>
             </div>
