--- a/main.html
+++ b/main.html
@@ -47,11 +47,13 @@
                 <p class="firstblock-text_footer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                 <a class="firstblock-button" href="./main.html">Get more details</a>
             </div>
-            <div class="firstblock-image">
-                <p>1</p>
-            </div>
+            <img src="./images/joy_stick.png" alt="joy_stick" class="firstblock-image">
         </div>
-
+        <!-- Блок с текстом и кнопкой -->
+        <div class="main_secondblock">
+            <p>Currently Trending Games</p>
+            <a class="secondblock-button" href="./main.html">Get more details</a>
+        </div>
     </div>
 
     <!--
