Again new block

--- a/main.html
+++ b/main.html
@@ -47,12 +47,48 @@
                 <p class="firstblock-text_footer">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
                 <a class="firstblock-button" href="./main.html">Get more details</a>
             </div>
-            <img src="./images/joy_stick.png" alt="joy_stick" class="firstblock-image">
+            <div >
+                <img src="./images/joy_stick.png" alt="joy_stick" class="firstblock-image_one">
+                <img src="./images/cry.png" alt="cry" class="firstblock-image_two">
+                <img src="./images/unity.png" alt="unity" class="firstblock-image_three">
+                <img src="./images/unreal.png" alt="unreal" class="firstblock-image_four">
+            </div>
         </div>
         <!-- Блок с текстом и кнопкой -->
         <div class="main_secondblock">
             <p>Currently Trending Games</p>
-            <a class="secondblock-button" href="./main.html">Get more details</a>
+            <a class="secondblock-button" href="./main.html">SEE ALL</a>
+        </div>
+        <!-- Блок с картинками трендовых игр и подписи к ним -->
+        <div class="main_thirdblock">
+            <div class="thirdblock-box">
+                <img src="./images/trand game (1).png" alt="trand game">
+                <div class="thirdblock-box_text">
+                    <img src="./images/fire.png" alt="fire">
+                    <p>40 Followers</p>
+                </div>
+            </div>
+            <div class="thirdblock-box">
+                <img src="./images/trand game (2).png" alt="trand game">
+                <div class="thirdblock-box_text">
+                    <img src="./images/fire.png" alt="fire">
+                    <p>40 Followers</p>
+                </div>
+            </div>
+            <div class="thirdblock-box">
+                <img src="./images/trand game (3).png" alt="trand game">
+                <div class="thirdblock-box_text">
+                    <img src="./images/fire.png" alt="fire">
+                    <p>40 Followers</p>
+                </div>
+            </div>
+            <div class="thirdblock-box">
+                <img src="./images/trand game (4).png" alt="trand game">
+                <div class="thirdblock-box_text">
+                    <img src="./images/fire.png" alt="fire">
+                    <p>40 Followers</p>
+                </div>
+            </div>
         </div>
     </div>
 
