--- a/about_us.html
+++ b/about_us.html
@@ -39,6 +39,21 @@
     -->
     <div class="main">
 
+        <!-- Универсальный блок с рассылкой -->
+        <div class="main_universalblock">
+            <p class="universalblock-head">Lorem Ipsum</p>
+            <p class="universalblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <div class="universalblock-mailing">
+                <div class="universalblock-mailing_content">
+                    <p class="universalblock-mailing_head">Stay in the loop</p>
+                    <p class="universalblock-mailing_text">Subscribe to receive the latest news and updates about TDA. We promise not to spam you!</p>
+                </div>
+                <div class="universalblock-mailing_input">
+                        <input class="universalblock-mailing_inputbtn" type="text" title="Enter your text" placeholder="Enter your text">
+                        <input class="universalblock-mailing_submit" type="submit" value="Continue">
+                </div>
+            </div>
+        </div>
     </div>
     
     <!--
