--- a/main.html
+++ b/main.html
@@ -39,6 +39,7 @@
         Основное тело сайта.
     -->
     <div class="main">
+
         <!-- Верхний блок с кнопкой -->
         <div class="main_firstblock">
             <div class="firstblock-text">
@@ -48,12 +49,13 @@
                 <a class="firstblock-button" href="./main.html">Get more details</a>
             </div>
             <div>
-                <img src="./images/joy_stick.png" alt="joy_stick" class="firstblock-image_one">
-                <img src="./images/cry.png" alt="cry" class="firstblock-image_two">
-                <img src="./images/unity.png" alt="unity" class="firstblock-image_three">
-                <img src="./images/unreal.png" alt="unreal" class="firstblock-image_four">
+                <img src="./images/main/joy_stick.png" alt="joy_stick" class="firstblock-image_one">
+                <img src="./images/main/cry.png" alt="cry" class="firstblock-image_two">
+                <img src="./images/main/unity.png" alt="unity" class="firstblock-image_three">
+                <img src="./images/main/unreal.png" alt="unreal" class="firstblock-image_four">
             </div>
         </div>
+
         <!-- Блок с текстом и кнопкой -->
         <div class="main_secondblock">
             <p>Currently Trending Games</p>
@@ -62,35 +64,94 @@
         <!-- Блок с картинками трендовых игр и подписи к ним -->
         <div class="main_thirdblock">
             <div class="thirdblock-box">
-                <img src="./images/trand game (1).png" alt="trand game">
+                <img src="./images/main/trand game (1).png" alt="trand game">
                 <div class="thirdblock-box_text">
-                    <img src="./images/fire.png" alt="fire">
+                    <img src="./images/main/fire.png" alt="fire">
                     <p>40 Followers</p>
                 </div>
             </div>
             <div class="thirdblock-box">
-                <img src="./images/trand game (2).png" alt="trand game">
+                <img src="./images/main/trand game (2).png" alt="trand game">
                 <div class="thirdblock-box_text">
-                    <img src="./images/fire.png" alt="fire">
+                    <img src="./images/main/fire.png" alt="fire">
                     <p>40 Followers</p>
                 </div>
             </div>
             <div class="thirdblock-box">
-                <img src="./images/trand game (3).png" alt="trand game">
+                <img src="./images/main/trand game (3).png" alt="trand game">
                 <div class="thirdblock-box_text">
-                    <img src="./images/fire.png" alt="fire">
+                    <img src="./images/main/fire.png" alt="fire">
                     <p>40 Followers</p>
                 </div>
             </div>
             <div class="thirdblock-box">
-                <img src="./images/trand game (4).png" alt="trand game">
+                <img src="./images/main/trand game (4).png" alt="trand game">
                 <div class="thirdblock-box_text">
-                    <img src="./images/fire.png" alt="fire">
+                    <img src="./images/main/fire.png" alt="fire">
                     <p>40 Followers</p>
                 </div>
             </div>
         </div>
+
+        <!-- Блок с текстом и картинкой на всю ширину -->
+        <div class="main_fourblock">
+            <p class="fourblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="fourblock-content">
+                <div class="fourblock-content_text">
+                    <p class="fourblock-text1">Lorem Ipsum</p>
+                    <p class="fourblock-text2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                </div>
+                <div class="fourblock-content_image">
+                    <img src="./images/main/points.png" alt="points">
+                </div>
+            </div>
+            <img class="fourblock-image" src="./images/main/spideman.png" alt="spiderman">
+        </div>
+
+        <!-- Блок задним фоном и ссылками на разные платформы -->
+        <div class="main_fiveblock">
+            <p class="fiveblock-head">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p class="fiveblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            <img src="./images/main/platforms.png" alt="platforms">
+        </div>
+
+        <!-- Блок с текстом, картинками и кнопкой -->
+        <div class="main_sixblock">
+            <p class="sixblock-head">Our Recent Projects</p>
+            <p class="sixblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="sixblock-images">
+                <div class="sixblock-images_one">
+                    <img src="./images/main/photo (1).png" alt="photo">
+                    <img src="./images/main/photo (2).png" alt="photo">
+                    <img src="./images/main/photo (3).png" alt="photo">
+                </div>
+                <div class="sixblock-images_two">
+                    <img src="./images/main/photo (5).png" alt="photo">
+                    <img src="./images/main/photo (4).png" alt="photo">
+                    <img src="./images/main/photo (6).png" alt="photo">
+                </div>
+            </div>
+            <div class="sixblock-button"><a href="./main.html">SEE ALL</a></div>
+        </div>
+
+        <!-- Универсальный блок с рассылкой -->
+        <div class="main_universalblock">
+            <p class="universalblock-head">Lorem Ipsum</p>
+            <p class="universalblock-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <div class="universalblock-mailing">
+                <div class="universalblock-mailing_content">
+                    <p class="universalblock-mailing_head">Stay in the loop</p>
+                    <p class="universalblock-mailing_text">Subscribe to receive the latest news and updates about TDA. We promise not to spam you!</p>
+                </div>
+                <div class="universalblock-mailing_input">
+                        <input class="universalblock-mailing_inputbtn" type="text" title="Enter your text" placeholder="Enter your text">
+                        <input class="universalblock-mailing_submit" type="submit" value="Continue">
+                </div>
+            </div>
+        </div>
     </div>
+
+
 
     <!--
         Footer с различным содержанием,
