--- a/about_us.html
+++ b/about_us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">About us</title>
     <link rel="stylesheet" href="./styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/about_us.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
@@ -39,6 +40,53 @@
     -->
     <div class="main">
 
+        <!-- Первый блок с текстом и картинкой на почти весь экран -->
+        <div class="main_firstblock">
+            <div class="firstblock-content">
+                <div class="firstblock-content_navigation">
+                    <a href="./main.html">Home</a>
+                    <p>></p>
+                    <a href="./about_us.html">About us</a>
+                </div>
+                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <div class="firstblock-content_btn">
+                    <a href="#">Get in touch <img src="./images/about_us/arrow.png" alt="arrow"></a>
+                    
+                </div>
+            </div>
+            <div class="firstblock-image">
+                <img src="./images/about_us/game.png" alt="game">
+            </div>
+        </div>
+
+        <!-- Блок с ответами на вопросы -->
+        <div class="main_secondblock">
+            <p>Why work with us</p>
+            <div class="secondblock-content">
+                <div class="secondblock-content_text1">
+                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                </div>
+                <div class="secondblock-content_text2">
+                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                </div>
+                <div class="secondblock-content_text3">
+                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Блок с картинкой девушки и текстом -->
+        <div class="main_thirdblock">
+            
+        </div>
+
         <!-- Универсальный блок с рассылкой -->
         <div class="main_universalblock">
             <p class="universalblock-head">Lorem Ipsum</p>
@@ -49,8 +97,8 @@
                     <p class="universalblock-mailing_text">Subscribe to receive the latest news and updates about TDA. We promise not to spam you!</p>
                 </div>
                 <div class="universalblock-mailing_input">
-                        <input class="universalblock-mailing_inputbtn" type="text" title="Enter your text" placeholder="Enter your text">
-                        <input class="universalblock-mailing_submit" type="submit" value="Continue">
+                    <input class="universalblock-mailing_inputbtn" type="text" title="Enter your text" placeholder="Enter your text">
+                    <input class="universalblock-mailing_submit" type="submit" value="Continue">
                 </div>
             </div>
         </div>
