--- a/about_us.html
+++ b/about_us.html
@@ -9,6 +9,7 @@
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
+    <div>
     <!--
         Сайт состоит из пяти основных страниц:
         Home, About us, Services, News, Contact us.
@@ -84,7 +85,39 @@
 
         <!-- Блок с картинкой девушки и текстом -->
         <div class="main_thirdblock">
-            
+            <img src="./images/about_us/girl.png" alt="girl">
+            <div class="thirdblock-content">
+                <p>Lorem ipsum</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+            </div>
+        </div>
+
+        <!-- Блок с лицами нашей команды -->
+        <div class="main_fourblock">
+            <p>Our team</p>
+            <div class="fourblock-content">
+                <div class="fourblock-content_page1">
+                    <img src="./images/about_us/Bill.png" alt="Bill">
+                    <p>John peter</p>
+                    <p>COO</p>
+                </div>
+                <div class="fourblock-content_page2">
+                    <img src="./images/about_us/Beverly.png" alt="Beverly">
+                    <p>John peter</p>
+                    <p>COO</p>
+                </div>
+                <div class="fourblock-content_page3">
+                    <img src="./images/about_us/Claudia.png" alt="Claudia">
+                    <p>John peter</p>
+                    <p>COO</p>
+                </div>
+                <div class="fourblock-content_page4">
+                    <img src="./images/about_us/Avatar.png" alt="Avatar">
+                    <p>John peter</p>
+                    <p>COO</p>
+                </div>
+            </div>
         </div>
 
         <!-- Универсальный блок с рассылкой -->
@@ -137,6 +170,6 @@
         <div class="footer_copyright">
             <p>Copyright ® 2021 Lorem All rights Rcerved</p>
         </div>
-    </footer>
+    </footer></div>
 </body>
 </html>
