--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Services</title>
     <link rel="stylesheet" href="./styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/services.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
@@ -39,6 +40,78 @@
     -->
     <div class="main">
 
+        <!-- Первый блок с количеством филиалов и т.п. -->
+        <div class="main_firstblock">
+            <div class="firstblock-navigation">
+                <a href="./main.html">Home</a>
+                <p>></p>
+                <a href="./services.html">Services</a>
+            </div>
+            <div class="firstblock-text">
+                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="firstblock-content">
+                <div class="firstblock-content_block1">
+                    <img src="./images/services/user.png" alt="user">
+                    <div class="firstblock-content_block1--text">
+                        <p>90+</p>
+                        <p>Clients</p>
+                    </div>
+                </div>
+                <div class="firstblock-content_block2">
+                    <img src="./images/services/location.png" alt="location">
+                    <div class="firstblock-content_block2--text">
+                        <p>30+</p>
+                        <p>Countries</p>
+                    </div>
+                </div>
+                <div class="firstblock-content_block3">
+                    <img src="./images/services/server.png" alt="server">
+                    <div class="firstblock-content_block3--text">
+                        <p>50+</p>
+                        <p>Projects</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Блок с видеоматериалом и текстом к нему -->
+        <div class="main_secondblock">
+            <img src="./images/services/Hero Video.png" alt="hero">
+            <div class="secondblock-content">
+                <p>Lorem Ipsum is simply dummy text.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy.</p>
+                <div class="secondblock-content_text1">
+                    <img src="./images/services/ok.png" alt="ok">
+                    <p>Lorem Ipsum is simply</p>
+                </div>
+                <div class="secondblock-content_text2">
+                    <img src="./images/services/ok.png" alt="ok">
+                    <p>Lorem Ipsum is simply</p>
+                </div>
+                <div class="secondblock-content_text3">
+                    <img src="./images/services/ok.png" alt="ok">
+                    <p>Lorem Ipsum is simply</p>
+                </div>
+                <div class="secondblock-content_text4">
+                    <img src="./images/services/ok.png" alt="ok">
+                    <p>Lorem Ipsum is simply</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Три блока с картинками и их описанием -->
+        <div class="main_thirdblock">
+            <div class="thirdblock-content">
+                <p></p>
+                <p></p>
+                <p></p>
+                <a href=""></a>
+            </div>
+            <img src="./images/services/fon (1).png" alt="fon">
+        </div>
+
         <!-- Универсальный блок с рассылкой -->
         <div class="main_universalblock">
             <p class="universalblock-head">Lorem Ipsum</p>
@@ -54,6 +127,7 @@
                 </div>
             </div>
         </div>
+
     </div>
     
     <!--
