--- a/services.html
+++ b/services.html
@@ -104,12 +104,59 @@
         <!-- Три блока с картинками и их описанием -->
         <div class="main_thirdblock">
             <div class="thirdblock-content">
-                <p></p>
-                <p></p>
-                <p></p>
-                <a href=""></a>
+                <p>Lorem Ipsum is simply dummy text dummy text</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <a href="#">Read more</a>
             </div>
             <img src="./images/services/fon (1).png" alt="fon">
+        </div>
+
+        <div class="main_thirdblock">
+            <img src="./images/services/fon (2).png" alt="fon">
+            <div class="thirdblock-content">
+                <p>Lorem Ipsum is simply dummy text dummy text</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+
+        <div class="main_thirdblock">
+            <div class="thirdblock-content">
+                <p>Lorem Ipsum is simply dummy text dummy text</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                <a href="#">Read more</a>
+            </div>
+            <img src="./images/services/fon (3).png" alt="fon">
+        </div>
+
+        <!-- Блок с отзывами о сайте и т.п. -->
+        <div class="main_fourblock">
+            <p>Trusted by Thousands of Happy Customer</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy .</p>
+            <div class="fourblock-content">
+                <div class="fourblock-content_block1">
+                    <div class="fourblock-content_block1--image">
+                        <img src="" alt="">
+                        <div class="fourblock-content_block1--image__text">
+                            <p>Viezh Robert</p>
+                            <p>Warsaw, Poland</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="fourblock-content_block2">
+                    <div class="fourblock-content_block2--image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div class="fourblock-content_block3">
+                    <div class="fourblock-content_block3--image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Универсальный блок с рассылкой -->
