--- a/services.html
+++ b/services.html
@@ -137,24 +137,64 @@
             <p>Trusted by Thousands of Happy Customer</p>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy .</p>
             <div class="fourblock-content">
-                <div class="fourblock-content_block1">
-                    <div class="fourblock-content_block1--image">
-                        <img src="" alt="">
-                        <div class="fourblock-content_block1--image__text">
-                            <p>Viezh Robert</p>
-                            <p>Warsaw, Poland</p>
+                <div class="fourblock-content_block">
+                    <div class="fourblock-content_block--image">
+                        <div class="fourblock-content_block--image__name">
+                            <img src="./images/services/people (1).png" alt="people">
+                            <div class="fourblock-content_block--image__text">
+                                <p>Viezh Robert</p>
+                                <p>Warsaw, Poland</p>
+                            </div>
+                        </div>
+                        <div class="fourblock-content_block--image__star">
+                            <p>4.5</p>
+                            <img src="./images/services/star.png" alt="star">
                         </div>
                     </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</p>
                 </div>
-                <div class="fourblock-content_block2">
-                    <div class="fourblock-content_block2--image">
-                        <img src="" alt="">
+                <div class="fourblock-content_block">
+                    <div class="fourblock-content_block--image">
+                        <div class="fourblock-content_block--image__name">
+                            <img src="./images/services/people (2).png" alt="people">
+                            <div class="fourblock-content_block--image__text">
+                                <p>Yessica Christy</p>
+                                <p>Shanxi, China</p>
+                            </div>
+                        </div>
+                        <div class="fourblock-content_block--image__star">
+                            <p>4.5</p>
+                            <img src="./images/services/star.png" alt="star">
+                        </div>
                     </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and ...</p>
+                </div><div class="fourblock-content_block">
+                    <div class="fourblock-content_block--image">
+                        <div class="fourblock-content_block--image__name">
+                            <img src="./images/services/people (3).png" alt="people">
+                            <div class="fourblock-content_block--image__text">
+                                <p>Kim Young Jou</p>
+                                <p>Seoul, South Korea</p>
+                            </div>
+                        </div>
+                        <div class="fourblock-content_block--image__star">
+                            <p>4.5</p>
+                            <img src="./images/services/star.png" alt="star">
+                        </div>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
                 </div>
-                <div class="fourblock-content_block3">
-                    <div class="fourblock-content_block3--image">
-                        <img src="" alt="">
-                    </div>
+            </div>
+            <div class="fourblock-footer">
+                <div class="fourblock-footer_points">
+                    <img src="./images/services/Union.png" alt="point">
+                    <img src="./images/services/point.png" alt="point">
+                    <img src="./images/services/point.png" alt="point">
+                    <img src="./images/services/point.png" alt="point">
+                </div>
+                <div class="fourblock-footer_arrow">
+                    <img src="./images/services/arrow left.png" alt="arrow">
+                    <img src="./images/services/arrow right.png" alt="arrow">
                 </div>
             </div>
         </div>
