--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">News</title>
     <link rel="stylesheet" href="./styles/all_styles.css">
+    <link rel="stylesheet" href="./styles/news.css">
     <script src="scripts/main_script.js"></script>
 </head>
 <body>
@@ -38,6 +39,125 @@
         Основное тело сайта.
     -->
     <div class="main">
+
+        <!-- Первый блок c навигацией и поиском -->
+        <div class="main_firstblock">
+            <div class="firstblock-navigation">
+                <a href="./main.html">Home</a>
+                <p>></p>
+                <a href="./news.html">News</a>
+            </div>
+            <div class="firstblock-text">
+                <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="firstblock-find">
+                <img src="./images/news/find.png" alt="find">
+                <input type="text" title="Search" placeholder="Search">
+            </div>
+        </div>
+
+        <!-- Второй - самый большой блок на странице -->
+        <div class="main_secondblock">
+            <!-- Левый блок -->
+            <div class="secondblock-left">
+                <div class="secondblock-left_block">
+                    <img src="./images/news/fon (1).png" alt="fon">
+                    <div class="secondblock-left_block--btns">
+                        <a href="#">John smash</a>
+                        <p>.5min</p>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text dummy text </p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="secondblock-left_block">
+                    <img src="./images/news/fon (2).png" alt="fon">
+                    <div class="secondblock-left_block--btns">
+                        <a href="#">John smash</a>
+                        <p>.5min</p>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text dummy text </p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+            </div>
+
+            <!-- Правый блок -->
+            <div class="secondblock-right">
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (1).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (2).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (3).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (4).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (5).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (6).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                <div class="secondblock-right_theme">
+                    <img src="./images/news/theme (7).png" alt="theme">
+                    <div class="secondblock-right_theme--container">
+                        <div class="secondblock-right_theme--btns">
+                            <a href="#">John smash</a>
+                            <p>.5min</p>
+                        </div>
+                        <p>Lorem Ipsum is simply dummy text dummy text ?</p>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
 
         <!-- Универсальный блок с рассылкой -->
         <div class="main_universalblock">
